# bedrock-agentcore-starter-toolkit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  agent_example.py  buildspec-lambda-package.yml  index.html  llms.txt  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  branch-protection.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-docs.yml  integration_testing.yml  pr-automerge.yml  release.yml  security-scanning.yml  security.yml  test-pypi-release.yml  test.yml
.github/workflows-backup-20250715-221720/: deploy-docs.yml  release.yml  security-scanning.yml
api-reference/: cli.html  cli.md  identity.html  identity.md  memory.html  memory.md  runtime.html  runtime.md  tools.html  tools.md
assets/javascripts/: bundle.f55a23d4.min.js
documentation/: README.md  mkdocs.yaml
documentation/docs/: README.md  index.md
documentation/docs/api-reference/: cli.md  identity.md  memory.md  runtime-cli.md  runtime.md  tools.md
documentation/docs/examples/: agentcore-quickstart-example.md  async-processing.md  gateway-integration.md  memory_gateway_agent.md  runtime-framework-agents.md  semantic_search.md  session-management.md
documentation/docs/mcp/: agentcore_runtime_deployment.md  llms.txt
documentation/docs/stylesheets/: extra.css
documentation/overrides/: main.html
examples/: agentcore-quickstart-example.html  agentcore-quickstart-example.md  async-processing.html  async-processing.md  gateway-integration.html  gateway-integration.md  index.html  index.md  memory_gateway_agent.html  memory_gateway_agent.md  runtime-framework-agents.html  runtime-framework-agents.md  semantic_search.html  semantic_search.md  session-management.html  session-management.md
examples/observability/dynatrace/: observability-agent-and-dynatrace-init.html  observability-agent-and-dynatrace-init.md  observability-basic-agent.html  observability-basic-agent.md  observability-dynatrace.html  observability-dynatrace.md
mcp/: agentcore_runtime_deployment.html  agentcore_runtime_deployment.md
scripts/: bump-version.py  fix-github-actions-no-wheelhouse.sh  fix-github-actions.sh  modify-toml-for-ci.py  prepare-release.py  setup-branch-protection.sh  validate-release.py
search/: search_index.json
src/bedrock_agentcore_starter_toolkit/cli/: cli.py  common.py
src/bedrock_agentcore_starter_toolkit/services/: codebuild.py  ecr.py  runtime.py  s3.py  xray.py
stylesheets/: extra.css
tests/: conftest.py  conftest_mock.py
tests/cli/: test_common.py
tests/cli/gateway/: test_commands.py
tests/cli/memory/: __init__.py  test_commands.py
tests/cli/runtime/: test_commands.py  test_configuration_manager.py
tests/fixtures/: project_config_multiple.yaml  project_config_single.yaml
tests/notebook/runtime/: test_bedrock_agentcore.py  (+1 more)
tests/services/: test_codebuild.py  test_ecr.py  test_runtime.py  test_runtime_conflict_error.py  test_s3.py  test_xray.py
tests/utils/: test_endpoints.py  test_logging_config.py
tests_integ/gateway/: README.md  test_cognito_token.py  test_create_gateway_role.py  test_egress_auth.py  test_gateway_cognito.py
tests_integ/identity/: access_token_3LO.py
tests_integ/memory/: memory-manager.ipynb  test_create_memory.py
tests_integ/notebook/: test_notebook_runtime.py  test_runtime.py
tests_integ/strands_agent/: agent_example.py
tests_integ/tools/: my_mcp_client.py  my_mcp_client_remote.py  my_mcp_server.py  setup_cognito.sh
tests_integ/utils/: config.py
user-guide/builtin-tools/: quickstart-browser.html  quickstart-browser.md  quickstart-code-interpreter.html  quickstart-code-interpreter.md
user-guide/gateway/: quickstart.html  quickstart.md
user-guide/identity/: quickstart.html  quickstart.md
user-guide/import-agent/: configuration.html  configuration.md  design.html  overview.html  overview.md  quickstart.html  quickstart.md
user-guide/memory/: quickstart.html  quickstart.md
user-guide/observability/: quickstart.html  quickstart.md
user-guide/runtime/: a2a.html  a2a.md  async.html  async.md  notebook.html  notebook.md  overview.html  overview.md  permissions.html  permissions.md  quickstart.html  quickstart.md
user-guide/security/: agentcore-vpc.html  agentcore-vpc.md  security-vpc-condition.html  security-vpc-condition.md  vpc-interface-endpoints.html  vpc-interface-endpoints.md
(+236 files in other folders)
